<resources>
    <string name="app_name">NT Bargain Hunter</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ac risus vel accumsan. Suspendisse posuere dapibus purus, non blandit magna malesuada vitae. Ut sed ligula ac elit ullamcorper convallis. Duis rhoncus nulla vitae justo malesuada, dignissim vehicula nunc porta. Nam tristique ut nunc vitae viverra. Cras neque lectus, viverra quis fermentum at, vehicula ac urna. Donec id suscipit lacus, consectetur molestie neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin a velit non risus iaculis interdum. </string>
    <string name="catagory_1">Category 1</string>
    <string name="catagory_2">Category 2</string>
    <string name="catagory_3">Category 3</string>
    <string name="catagory_4">Category 4</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="app_favourite_title">Favourite Items</string>
    <string name="cancel">Cancel Registration</string>
    <string name="clear">Clear</string>
    <string name="LogIn">Sign In</string>
    <string name="register">Register</string>
    <string name="LogInText">Sign in to get most out of NTBargainHunter</string>
    <string name="loginDescription">Got something to post ?</string>
    <string name="LogInFB">Sign In With Facebook</string>
    <string name="LogInG">Sign In With Google</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_post_text">Post</string>
    <string name="bottom_ac_text">Account</string>
    <string name="bottom_fav_text">Favourite</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
</resources>
