<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserBargainList">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/userPageFooterNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
             <TextView android:id="@+id/loginTextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                 android:layout_marginTop="100dp"
                 android:textColor="@color/colorPrimary"
                 android:textFontWeight="500"
                 android:layout_marginLeft="30dp"
            android:text="@string/LogInText"/>
            <Button
                android:id="@+id/tempLogInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorAccentBlue"
                android:gravity="center_horizontal"
                android:onClick="goToSignInPage"
                android:text="@string/LogIn" />
            <TextView android:id="@+id/postDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="30dp"
                android:textFontWeight="500"
                android:text="@string/loginDescription"/>
            <TextView android:id="@+id/downwardArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="100dp"
                android:drawableBottom="@drawable/ic_arrow_downward_black_24dp"
                android:textFontWeight="500" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/userPageFooterNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/cardview_light_background"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/footer_nav_menu" />
</android.support.constraint.ConstraintLayout>