<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerEmailEntryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-mail Address" />

            <EditText
                android:id="@+id/registerEmailEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="example@example.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/registerEmailProblemDecription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#ff0033" />

            <TextView
                android:id="@+id/registerNameEntryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name" />

            <EditText
                android:id="@+id/registerNameEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="John Smith"
                android:inputType="text" />

            <TextView
                android:id="@+id/registerNameProblemDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#ff0033" />

            <TextView
                android:id="@+id/registerPasswordEntryDecription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password" />

            <EditText
                android:id="@+id/registerPasswordEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/registerPasswordProblemDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#ff0033" />

            <TextView
                android:id="@+id/registerConfirmPasswordEntryDecription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comfirm Password" />

            <EditText
                android:id="@+id/registerConfirmPasswordEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/registerConfirmPasswordProblemDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#ff0033" />

            <Button
                android:id="@+id/registerUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccentBlue"
                android:onClick="register"
                android:text="@string/register" />
            <Button
                android:id="@+id/cancelInput"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccentBlue"
                android:layout_height="wrap_content"
                android:onClick="cancel"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/clearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccentBlue"
                android:onClick="clearForm"
                android:text="@string/clear" />
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/userPageFooterNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/cardview_light_background"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/footer_nav_menu" />
</android.support.constraint.ConstraintLayout>